Donwload Confirm動作確認用リンク追加

--- a/index.html
+++ b/index.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+<head>
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="nagopy.com : ">
+<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<title>apps.nagopy.com</title>
+</head>
 
-    <title>nagopy.com</title>
-  </head>
+<body>
 
-  <body>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+	<header class="inner">
+		<a id="forkme_banner" href="https://github.com/75py">View on GitHub</a>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/75py">View on GitHub</a>
+		<h1 id="project_title">apps.nagopy.com</h1>
+		<h2 id="project_tagline"></h2>
+	</header>
+</div>
 
-          <h1 id="project_title">nagopy.com</h1>
-          <h2 id="project_tagline"></h2>
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+	<section id="main_content" class="inner">
+		<h1>Android applications</h1>
 
-        </header>
-    </div>
+		<div class="inner">
+			<h2><a href="https://play.google.com/store/apps/details?id=com.nagopy.android.downloadconfirm">Download Confirm</a></h2>
+			<p>ZIPファイルやPDFファイルのリンクをタップした際、ダウンロード前にダイアログを挟むアプリです。主にChromeで動作します。</p>
+			<p>詳しい使い方は<a href="http://octoba.net/">OCTOBA</a>様のレビュー記事をご覧ください。</p>
+			<p><a href="http://octoba.net/archives/20141216-android-app-download-confirm-395214.html">しまったこれPDFのリンクだった！を防いでくれるアプリ : Download Confirm [beta]</a></p>
+			<h3>動作確認用リンク</h3>
+			<ul>
+				<li><a href="dummy.apk">APK file</li>
+				<li><a href="dummy.pdf">PDF file</li>
+				<li><a href="dummy.tgz">TGZ file</li>
+				<li><a href="dummy.zip">ZIP file</li>
+			</ul>
+		</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="nagopycom" class="anchor" href="#nagopycom" aria-hidden="true"><span class="octicon octicon-link"></span></a>nagopy.com</h1>
-      </section>
-    </div>
+	</section>
+</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+<!-- FOOTER -->
+<div id="footer_wrap" class="outer">
+	<footer class="inner">
+		<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+	</footer>
+</div>
 
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-9578951-15");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+	try {
+		var pageTracker = _gat._getTracker("UA-9578951-15");
+	pageTracker._trackPageview();
+	} catch(err) {}
+</script>
 
-
-  </body>
+</body>
 </html>
