--- a/android/downloadconfirm.html
+++ b/android/downloadconfirm.html
@@ -4,9 +4,9 @@
 <meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
-<title>apps.nagopy.com</title>
+<title>Download Confirm - apps.nagopy.com</title>
 </head>
 
 <body>
@@ -17,17 +17,27 @@
 		<a id="forkme_banner" href="https://github.com/75py">View on GitHub</a>
 
 		<h1 id="project_title">apps.nagopy.com</h1>
-		<h2 id="project_tagline"></h2>
+		<h2 id="project_tagline">Download Confirm</h2>
 	</header>
 </div>
 
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 	<section id="main_content" class="inner">
-		<h1>Android applications</h1>
+		<h1>Download Confirm</h1>
 
+		<p>ダウンロード：<a href="https://play.google.com/store/apps/details?id=com.nagopy.android.downloadconfirm">Google Play</a></p>
+
+		<p>ZIPファイルやPDFファイルのリンクをタップした際、ダウンロード前にダイアログを挟むアプリです。主にChromeで動作します。</p>
+		<p>詳しい使い方は<a href="http://octoba.net/">OCTOBA</a>様のレビュー記事をご覧ください。</p>
+		<p><a href="http://octoba.net/archives/20141216-android-app-download-confirm-395214.html">しまったこれPDFのリンクだった！を防いでくれるアプリ : Download Confirm [beta]</a></p>
+
+		<h2>動作確認用リンク</h2>
 		<ul>
-			<li><a href="android/downloadconfirm.html">Download Confirm</a></li>
+			<li><a href="dummy.apk">APK file</li>
+			<li><a href="dummy.pdf">PDF file</li>
+			<li><a href="dummy.tgz">TGZ file</li>
+			<li><a href="dummy.zip">ZIP file</li>
 		</ul>
 
 	</section>
